refactor: add comprehensive testing, documentation, and API improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Database
 %prod.quarkus.datasource.db-kind=postgresql
 %prod.quarkus.datasource.username=quarkus_test
 %prod.quarkus.datasource.password=quarkus_test
@@ -5,9 +6,33 @@
 %prod.quarkus.datasource.jdbc.max-size=8
 %prod.quarkus.datasource.jdbc.min-size=2
 
+# Hibernate ORM
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
 
+# OpenAPI Generator
 quarkus.openapi.generator.spec=warehouse-openapi.yaml
 quarkus.openapi.generator.base-package=com.warehouse.api
+
+# OpenAPI Documentation
+quarkus.smallrye-openapi.path=/openapi
+mp.openapi.extensions.smallrye.info.title=Fulfilment Application API
+mp.openapi.extensions.smallrye.info.version=1.0.0
+mp.openapi.extensions.smallrye.info.description=Comprehensive API for managing stores, products, and warehouses with legacy system integration
+mp.openapi.extensions.smallrye.info.contact.name=Fulfilment Team
+mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
+
+# Swagger UI
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/swagger-ui
+quarkus.swagger-ui.theme=original
+
+# JaCoCo Code Coverage
+%dev.quarkus.jacoco.enabled=false
+%test.quarkus.jacoco.enabled=true
+%test.quarkus.jacoco.report-location=target/jacoco-report
+%test.quarkus.jacoco.data-file=target/jacoco.exec
+%test.quarkus.jacoco.includes=com/fulfilment/**
+%test.quarkus.jacoco.excludes=**/*_generated/**,**/generated/**
+%prod.quarkus.jacoco.enabled=false
