--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,35 @@ jobs:
       - name: Build and run tests
         run: ./mvnw -B -ntp verify
 
+      - name: Debug report locations (non-blocking)
+        if: always()
+        run: |
+          echo "== Workspace =="
+          pwd
+          echo
+          echo "== Find test/coverage outputs =="
+          find . -maxdepth 4 -type d \( -name "surefire-reports" -o -name "failsafe-reports" -o -name "jacoco-report" \) -print || true
+          echo
+          echo "== List top-level target (if present) =="
+          ls -la target || true
+          echo
+          echo "== List surefire reports (if present) =="
+          ls -la target/surefire-reports || true
+          echo
+          echo "== List jacoco report (if present) =="
+          ls -la target/jacoco-report || true
+
       - name: Upload JUnit test reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: junit-test-reports
           path: |
+            target/surefire-reports/**
+            target/failsafe-reports/**
             **/target/surefire-reports/**
             **/target/failsafe-reports/**
-          if-no-files-found: ignore
+          if-no-files-found: warn
 
       - name: Upload JaCoCo report
         if: always()
@@ -52,9 +72,11 @@ jobs:
         with:
           name: jacoco-report
           path: |
+            target/jacoco-report/**
+            target/jacoco.exec
             **/target/jacoco-report/**
             **/target/site/jacoco/**
-          if-no-files-found: ignore
+          if-no-files-found: warn
 
       - name: Upload built artifacts
         if: success()
@@ -64,5 +86,5 @@ jobs:
           path: |
             target/*.jar
             target/quarkus-app/**
-          if-no-files-found: ignore
+          if-no-files-found: warn
 
