refactor: update API error handling and validation responses, enhance OpenAPI documentation, and improve CI workflow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,9 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
 
-# OpenAPI Generator
-quarkus.openapi.generator.spec=warehouse-openapi.yaml
-quarkus.openapi.generator.base-package=com.warehouse.api
-
 # OpenAPI Documentation
 quarkus.smallrye-openapi.path=/openapi
+quarkus.smallrye-openapi.store-schema-directory=target/openapi
 mp.openapi.extensions.smallrye.info.title=Fulfilment Application API
 mp.openapi.extensions.smallrye.info.version=1.0.0
 mp.openapi.extensions.smallrye.info.description=Comprehensive API for managing stores, products, and warehouses with legacy system integration
