--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: chmod +x mvnw
 
       - name: Build and run tests
-        run: ./mvnw -B -ntp verify
+        run: ./mvnw -B -ntp clean test
 
       - name: Debug report locations (non-blocking)
         if: always()
@@ -43,7 +43,7 @@ jobs:
           pwd
           echo
           echo "== Find test/coverage outputs =="
-          find . -maxdepth 4 -type d \( -name "surefire-reports" -o -name "failsafe-reports" -o -name "jacoco-report" \) -print || true
+          find . -maxdepth 4 -type d \( -name "surefire-reports" -o -name "failsafe-reports" -o -name "jacoco-report" -o -name "openapi" \) -print || true
           echo
           echo "== List top-level target (if present) =="
           ls -la target || true
@@ -53,6 +53,19 @@ jobs:
           echo
           echo "== List jacoco report (if present) =="
           ls -la target/jacoco-report || true
+          echo
+          echo "== List generated OpenAPI schema (if present) =="
+          ls -la target/openapi || true
+
+      - name: Upload generated OpenAPI schema
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: openapi-schema
+          path: |
+            target/openapi/**
+            **/target/openapi/**
+          if-no-files-found: warn
 
       - name: Upload JUnit test reports
         if: always()
