--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: chmod +x mvnw
 
       - name: Build and run tests
-        run: ./mvnw -B -ntp clean test
+        run: ./mvnw -B -ntp clean verify
 
       - name: Debug report locations (non-blocking)
         if: always()
